invite_handlers fix
